@@ -110,6 +110,12 @@
             />
 
         <CheckBoxPreference
+            android:key="absolute_date"
+            android:title="@string/absolute_date"
+            android:defaultValue="false"
+            />
+
+        <CheckBoxPreference
             android:key="use_emojis"
             android:title="@string/enable_emojis"
             android:defaultValue="false"
